[package]
name = "sleme"
version = "0.1.0"
edition = "2018"
rust-version = "1.63.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
httpstatus = "0.1.2"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
scraper = "0.13.0"
serde = "1.0.144"
serde_json = "1.0.85"
worker = "0.0.11"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
